@@ -1,6 +1,7 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.2.3
+05-08-2020	Fix issues in chr_pos_a1_a2() with vector input and suggest R/genetics
 28-04-2020	Change colors for cis/trans signals in circos.cis.vs.trans.plot()
 22-02-2020	Add bat data example for MCMCgrm on a query from Shengjing Song <songsj455@nenu.edu.cn>
 		Merge d3json() to mhtplot3d(), drop the template, regress and suggest plotly
